--- a/static/css/view_more.css
+++ b/static/css/view_more.css
@@ -66,7 +66,7 @@
   font-family: "Libre Franklin", sans-serif;
   background-color: #c6d2ed;
   color: white;
-  border: #dcdcdc solid 2px;
+  border: white solid 1px;
   font-size: 20px;
   width: 6em;
 }
@@ -75,7 +75,7 @@
   font-family: "Libre Franklin", sans-serif;
   background-color: #c6d2ed;
   color: white;
-  border: #dcdcdc solid 2px;
+  border: white solid 1px;
   font-size: 20px;
   width: 6em;
   float: right;
