--- a/templates/search.html
+++ b/templates/search.html
@@ -17,16 +17,16 @@
     <div class="row card- panel">
         <form action="{{ url_for('search') }}" method="post" class="col s12">
             <div class="row valign-wrapper center-align">
-                <div class="input-field col s12 m8">
+                <div class="input-field col s12">
                     <i class="fas fa-search prefix"></i>
                     <input type="text" name="query" id="query" minlength="3" class="validate" required>
                     <label for="query">Search Recipes</label>
+                    </div>
                 </div>
-                <div class="col s12 m4">
-                <a href=" {{ url_for('search') }}" class="btn reset">Reset</a>
-                    <button type="submit" class="btn search">Search
+                <div class="col s12">
+                <button type="submit" class="btn search">Search
                     </button>
-                </div>
+                <a href=" {{ url_for('search') }}" class="btn reset">Reset</a>
             </div>
         </form>
     </div>
@@ -70,6 +70,5 @@
     {% endfor %}
   </div>
 </div> 
-
 
 {% endblock %}
