Gave recipe cards a min-height to display the same size

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -45,8 +45,9 @@
 /* Recipe Cards */
 .card{
     overflow: hidden;
-    max-height: 600px;
+    min-height: 360px;
     display: block;
+
 }
 
 .card-content{
