--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,7 @@
 <div class="container">
   <div class="row">
     {% for recipe in add_recipes %}
-    <div class="col s12 m3">
+    <div class="col s12 m4 l3">
       <div class="card">
         <!-- Image -->
         <div class="card-image">
