--- a/templates/search.html
+++ b/templates/search.html
@@ -18,7 +18,7 @@
         <form action="{{ url_for('search') }}" method="post" class="col s12">
             <div class="row valign-wrapper center-align">
                 <div class="input-field col s12">
-                    <i class="fas fa-search prefix"></i>
+                    <i class="fas fa-search prefix" id="search-icon"></i>
                     <input type="text" name="query" id="query" minlength="3" class="validate" required>
                     <label for="query">Search Recipes</label>
                     </div>
