--- a/templates/update_recipe.html
+++ b/templates/update_recipe.html
@@ -115,31 +115,23 @@
       </div>
       <!-- Ingredients -->
       <div class="input-field col s12">
-        <input
-          value="{{ recipe.ingredients }}"
-          id="ingredients"
-          name="ingredients"
-          type="text"
-          class="validate"
-          required
-        />
-        <label class="fas fa-mortar-pestle" for="ingredients"
+      <label class="fas fa-mortar-pestle" for="ingredients"
           >&nbsp;&nbsp;<span>Ingredients</span></label
         >
+        <br/>
+        <br/>
+      <textarea id="ingredients" name="ingredients" type="text"
+          class="validate" placeholder="Enter each ingredient on a new line" required></textarea>
       </div>
       <!-- Method -->
       <div class="input-field col s12">
-        <input
-          value="{{ recipe.method }}"
-          id="method"
-          name="method"
-          type="text"
-          class="validate"
-          required
-        />
-        <label class="fas fa-arrow-circle-down" for="method"
+      <label class="fas fa-arrow-circle-down" for="method"
           >&nbsp;&nbsp;<span>Method</span></label
         >
+        <br/>
+        <br/>
+        <textarea id="method" name="method" type="text"
+          class="validate" placeholder="Enter each method on a new line" required></textarea>
       </div>
       <!-- Submit Button -->
       <button class="button-left" type="submit">
