--- a/templates/view_more.html
+++ b/templates/view_more.html
@@ -1,6 +1,4 @@
 {% extends "base.html" %} 
-{% block content %} 
-
 {% block styles %}
 <!-- Index CSS-->
 <link
@@ -10,7 +8,7 @@
 />
 {% endblock %} 
 
-{% for recipe in recipe %}
+{% block content %} 
 <div class="container" id="background">
   <div class="row">
     <!-- Image -->
@@ -47,34 +45,40 @@
   </div>
 
   <!-- Ingredients -->
+ 
   <div class="row">
     <div class="col s12 m6" id="more-ingredients">
       <h3>Ingredients</h3>
-      {{ recipe.ingredients }}
+      {% for ingredient in recipe.ingredients %}
+      <ul>
+      <li><i class="fas fa-check">&nbsp;</i>{{ ingredient }}</li>
+      </ul>
+      {% endfor %}
     </div>
     <!-- Method -->
     <div class="col s12 m6" id="more-method">
       <h3>Method</h3>
-      {{ recipe.method }}
+      {% for method in recipe.method %}
+      <ul>
+      <li><i class="fas fa-check">&nbsp;</i>{{ method }}</li>
+      </ul>
+       {% endfor %}
     </div>
   </div>
-  <div class="btns-vm">
 
+  <div class="btns-vm">
     <!-- Update & Delete Buttons -->
     <a
       href="{{url_for('update_recipe', recipe_id=recipe._id)}}"
       class="btn"
       id="update-btn"
-      >Update</a
-    >
+      >Update</a>
     <a
       href="{{url_for('delete_recipe', recipe_id=recipe._id)}}"
       class="btn"
       id="delete-btn" onclick="document.getElementById('delete').style.display='block'"
-      >Delete</a
-    >
+      >Delete</a>
   </div>
-  {% endfor %}
 </div>
 
 {% endblock %}
