--- a/templates/search.html
+++ b/templates/search.html
@@ -1,46 +1,51 @@
-{% extends "base.html" %} {% block content %}
-
-{% block styles %}
+{% extends "base.html" %} {% block content %} {% block styles %}
 <!-- Index CSS-->
-     <link
-      rel="stylesheet"
-      href="{{ url_for('static', filename='css/search.css') }}"
-      type="text/css"
-    />
+<link
+  rel="stylesheet"
+  href="{{ url_for('static', filename='css/search.css') }}"
+  type="text/css"
+/>
 {% endblock %}
 
 <!-- Page Title -->
-
 <h1 class="search_recipe">Search for a Recipe</h1>
-
 <!-- Search Form -->
-    <div class="row card- panel">
-        <form action="{{ url_for('search') }}" method="post" class="col s12">
-            <div class="row valign-wrapper center-align">
-                <div class="input-field col s12">
-                    <i class="fas fa-search prefix" id="search-icon"></i>
-                    <input type="text" name="query" id="query" minlength="3" class="validate" required>
-                    <label for="query">Search Recipes</label>
-                    </div>
-                </div>
-                <div class="col s12">
-                <button type="submit" class="btn search">Search
-                    </button>
-                <a href=" {{ url_for('search') }}" class="btn reset">Reset</a>
-            </div>
-        </form>
+<div class="row card- panel">
+  <form action="{{ url_for('search') }}" method="post" class="col s12">
+    <div class="row valign-wrapper center-align">
+      <div class="input-field col s12">
+        <i class="fas fa-search prefix" id="search-icon"></i>
+        <input
+          type="text"
+          name="query"
+          id="query"
+          minlength="3"
+          class="validate"
+          required
+        />
+        <label for="query">Search Recipes</label>
+      </div>
     </div>
-
-
+    <div class="col s12">
+      <button type="submit" class="btn search">Search</button>
+      <a href=" {{ url_for('search') }}" class="btn reset">Reset</a>
+    </div>
+  </form>
+</div>
 <!-- Recipe Cards -->
 <div class="container">
   <div class="row">
-  {% for recipe in add_recipes %}
+    {% for recipe in add_recipes %}
     <div class="col s12 m3">
       <div class="card">
         <!-- Image -->
         <div class="card-image waves-effect waves-block waves-light">
-          <img class="activator" src="{{ recipe.image_url }}" width="500" height="200"/>
+          <img
+            class="activator"
+            src="{{ recipe.image_url }}"
+            width="500"
+            height="200"
+          />
         </div>
         <!-- Recipe Name-->
         <div class="card-content">
@@ -63,12 +68,16 @@
           <!-- Description -->
           <p>{{ recipe.description }}</p>
           <!-- View More -->
-          <p><a href="{{ url_for('view_more', recipe_id=recipe._id) }}">View More</a></p>
+          <p>
+            <a href="{{ url_for('view_more', recipe_id=recipe._id) }}"
+              >View More</a
+            >
+          </p>
         </div>
       </div>
     </div>
     {% endfor %}
   </div>
-</div> 
+</div>
 
 {% endblock %}
