--- a/templates/update_recipe.html
+++ b/templates/update_recipe.html
@@ -1,20 +1,20 @@
-{% extends "base.html" %} {% block content %}
-
-{% block styles %}
+{% extends "base.html" %} {% block content %} {% block styles %}
 <!-- Index CSS-->
-     <link
-      rel="stylesheet"
-      href="{{ url_for('static', filename='css/update_recipe.css') }}"
-      type="text/css"
-    />
+<link
+  rel="stylesheet"
+  href="{{ url_for('static', filename='css/update_recipe.css') }}"
+  type="text/css"
+/>
 {% endblock %}
-
-
 
 <!-- Update Recipes -->
 <h3 id="add_recipe_title">Update Recipe</h3>
 <div class="row-card-panel container">
-  <form class="col s12" method="POST" action="{{ url_for('update_recipe', recipe_id=recipe._id) }}">
+  <form
+    class="col s12"
+    method="POST"
+    action="{{ url_for('update_recipe', recipe_id=recipe._id) }}"
+  >
     <div class="row">
       <!-- Author Name -->
       <div class="input-field col s12">
@@ -26,7 +26,9 @@
           class="validate"
           required
         />
-        <label class="fas fa-user" for="author">&nbsp;&nbsp;<span>Author</span></label>
+        <label class="fas fa-user" for="author"
+          >&nbsp;&nbsp;<span>Author</span></label
+        >
       </div>
       <!-- Recipe Name -->
       <div class="input-field col s12">
@@ -34,6 +36,8 @@
           value="{{ recipe.recipe_name }}"
           id="recipe_name"
           name="recipe_name"
+          minlength="3"
+          maxlength="20"
           type="text"
           class="validate"
           required
@@ -64,7 +68,7 @@
           id="description"
           name="description"
           minlength="10"
-          maxlength="100"
+          maxlength="300"
           type="text"
           class="validate"
           required
@@ -73,12 +77,14 @@
           >&nbsp;&nbsp;<span>Description</span></label
         >
       </div>
-      <!-- Preptime -->
+      <!-- Prep Time -->
       <div class="input-field col s12">
         <input
           value="{{ recipe.preptime }}"
           id="preptime"
           name="preptime"
+          minlength="3"
+          maxlength="8"
           type="text"
           class="validate"
           required
@@ -93,6 +99,8 @@
           value="{{ recipe.bakingtime }}"
           id="bakingtime"
           name="bakingtime"
+          minlength="3"
+          maxlength="8"
           type="text"
           class="validate"
           required
@@ -107,42 +115,62 @@
           value="{{ recipe.serves }}"
           id="serves"
           name="serves"
+          minlength="1"
+          maxlength="5"
           type="text"
           class="validate"
           required
         />
-        <label class="fas fa-utensils" for="serves">&nbsp;&nbsp;<span>Serves</span></label>
+        <label class="fas fa-utensils" for="serves"
+          >&nbsp;&nbsp;<span>Serves</span></label
+        >
       </div>
       <!-- Ingredients -->
       <div class="input-field col s12">
-      <label class="fas fa-mortar-pestle" for="ingredients"
+        <label class="fas fa-mortar-pestle" for="ingredients"
           >&nbsp;&nbsp;<span>Ingredients</span></label
         >
-        <br/>
-        <br/>
-      <textarea id="ingredients" name="ingredients" type="text"
-          class="validate" placeholder="Enter each ingredient on a new line" required></textarea>
+        <br />
+        <br />
+        <textarea
+          id="ingredients"
+          name="ingredients"
+          minlength="10"
+          maxlength="500"
+          type="text"
+          class="validate"
+          placeholder="Enter each ingredient on a new line"
+          required
+        ></textarea>
       </div>
       <!-- Method -->
       <div class="input-field col s12">
-      <label class="fas fa-arrow-circle-down" for="method"
+        <label class="fas fa-arrow-circle-down" for="method"
           >&nbsp;&nbsp;<span>Method</span></label
         >
-        <br/>
-        <br/>
-        <textarea id="method" name="method" type="text"
-          class="validate" placeholder="Enter each method on a new line" required></textarea>
+        <br />
+        <br />
+        <textarea
+          id="method"
+          name="method"
+          type="text"
+          minlength="10"
+          maxlength="500"
+          class="validate"
+          placeholder="Enter each method on a new line"
+          required
+        ></textarea>
       </div>
-      <!-- Submit Button -->
+      <!-- Submit -->
       <button class="button-left" type="submit">
-        Update 
+        Update
       </button>
-      <!-- Cancel Button -->
+      <!-- Cancel -->
       <div class="button-right">
-      <a href="{{ url_for('index') }}">
-      Cancel
-      </a>
-        </div>
+        <a href="{{ url_for('index') }}">
+          Cancel
+        </a>
+      </div>
     </div>
   </form>
 </div>
