--- a/templates/view_more.html
+++ b/templates/view_more.html
@@ -1,14 +1,11 @@
-{% extends "base.html" %} 
-{% block styles %}
+{% extends "base.html" %} {% block styles %}
 <!-- Index CSS-->
 <link
   rel="stylesheet"
   href="{{ url_for('static', filename='css/view_more.css') }}"
   type="text/css"
 />
-{% endblock %} 
-
-{% block content %} 
+{% endblock %} {% block content %}
 <div class="container" id="background">
   <div class="row">
     <!-- Image -->
@@ -21,37 +18,35 @@
     </div>
     <!-- Prep Time -->
     <div class="grid">
-    <div class="col s4 l2">
-    <div>{{ recipe.preptime }}</div>
-    <br/>
-      <i class="far fa-clock" id="preptime-vm"></i>
-      <p>Prep Time</p>
-    </div>
-    <!-- Baking Time -->
-    <div class="col s4 l2">
-    <div>{{ recipe.bakingtime }}</div>
-    <br/>
-      <i class="fas fa-hourglass-end" id="bakingtime-vm"></i>
-      <p>Baking Time</p>
-    </div>
-    <!-- Serves -->
-    <div class="col s4 l2">
-    <div>{{ recipe.serves }}</div>
-    <br/>
-      <i class="fas fa-utensils" id="serves-vm"></i>
-      <p>Serves</p>
+      <div class="col s4 l2">
+        <div>{{ recipe.preptime }}</div>
+        <br />
+        <i class="far fa-clock" id="preptime-vm"></i>
+        <p>Prep Time</p>
+      </div>
+      <!-- Baking Time -->
+      <div class="col s4 l2">
+        <div>{{ recipe.bakingtime }}</div>
+        <br />
+        <i class="fas fa-hourglass-end" id="bakingtime-vm"></i>
+        <p>Baking Time</p>
+      </div>
+      <!-- Serves -->
+      <div class="col s4 l2">
+        <div>{{ recipe.serves }}</div>
+        <br />
+        <i class="fas fa-utensils" id="serves-vm"></i>
+        <p>Serves</p>
       </div>
     </div>
   </div>
-
   <!-- Ingredients -->
- 
   <div class="row">
     <div class="col s12 m6" id="more-ingredients">
       <h3>Ingredients</h3>
       {% for ingredient in recipe.ingredients %}
-      <ul>
-      <li><i class="fas fa-check">&nbsp;</i>{{ ingredient }}</li>
+      <ul class="align">
+        <li><i class="fas fa-check">&nbsp;</i>{{ ingredient }}</li>
       </ul>
       {% endfor %}
     </div>
@@ -59,25 +54,27 @@
     <div class="col s12 m6" id="more-method">
       <h3>Method</h3>
       {% for method in recipe.method %}
-      <ul>
-      <li><i class="fas fa-check">&nbsp;</i>{{ method }}</li>
+      <ul class="align">
+        <li><i class="fas fa-check">&nbsp;</i>{{ method }}</li>
       </ul>
-       {% endfor %}
+      {% endfor %}
     </div>
   </div>
-
   <div class="btns-vm">
     <!-- Update & Delete Buttons -->
     <a
       href="{{url_for('update_recipe', recipe_id=recipe._id)}}"
       class="btn"
       id="update-btn"
-      >Update</a>
+      >Update</a
+    >
     <a
       href="{{url_for('delete_recipe', recipe_id=recipe._id)}}"
       class="btn"
-      id="delete-btn" onclick="document.getElementById('delete').style.display='block'"
-      >Delete</a>
+      id="delete-btn"
+      onclick="document.getElementById('delete').style.display='block'"
+      >Delete</a
+    >
   </div>
 </div>
 
