Edited the upload recipe to show previous ingredients and method

--- a/templates/search.html
+++ b/templates/search.html
@@ -33,6 +33,7 @@
   </form>
 </div>
 <!-- Recipe Cards -->
+{% if add_recipes %}
 <div class="container">
   <div class="row">
     {% for recipe in add_recipes %}
@@ -79,5 +80,7 @@
     {% endfor %}
   </div>
 </div>
-
+{% else %}
+        <h3 class="red-text text-darken-4 center-align">No Results Found</h3>
+    {% endif %}
 {% endblock %}
